2006-11-21  Thomas Schwinge  <tschwinge@gnu.org>

	* doc/Makefrag.am (doc/web, html-local, ps-local, pdf-local)
	($(srcdir)/doc/version.texi): New targets to faciliate keeping the web
	pages of the GNU Mach Reference Manual updated.

2006-11-20  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	Asm tidy.
	* i386/i386/fpe_linkage.c (disable_fpe): Gather dependent asm
	statements, add `ax' clobber.
	(fpe_exception_fixup): Drop bogus cast from input parameter of lcall
	asm statement.
	* i386/i386/pio.h (inw, outw): Drop 0x66 prefix an just use the w
	instruction variant.
	* i386/i386/proc_reg.h: (get_eflags, get_tr, get_ldt): Drop
	useless "volatile" from asm statement.
	(get_esp): Use direct asm register specification.
	* i386/include/mach/i386/cthreads.h (cthread_sp): Likewise.
	* i386/intel/pmap.c (pmap_unmap_page_zero): Fix asm clobber into `eax'.

	De4x5 probe fixup.
	* linux/src/drivers/net/de4x5.c (pci_probe): Make probe loop stop on
	any error, not only device not found.

2006-11-17  Constantine Kousoulos  <wuwei@freemail.gr>
	    Thomas Schwinge  <tschwinge@gnu.org>

	[bug #18010 --- ``GNU Mach: update i386/README-Drivers and
	doc/mach.texi'']
	* i386/README-Drivers: Move most of the text into...
	* doc/mach.texi: ... here and update a number of things.
	(UPDATED): Don't override.

2006-11-13  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* i386/i386at/iopl.c (ioplmmap): Add `int' return type.
	* i386/i386at/model_dep.c (halt_all_cpus): Fix typo in declaration.
	* kern/assert.h (Assert): Add __attribute__ ((noreturn)) to
	declaration.
	* kern/debug.c (Debugger): Add __attribute__ ((noreturn)) to
	declaration.
	(Debugger): Add call to panic().
	* kern/debug.h (panic): Add __attribute__ ((noreturn)) to declaration.
	* util/putchar.c (putchar): Return printed char.

2006-11-13  Barry deFreese  <bddebian@comcast.net>

	* device/chario.c (tty_cts): Add `void' return type.
	* device/cons.c (cninit, cnputc): Add `void' return type.